<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom" />-->
    <!-- Search Widget -->


    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@mipmap/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />


    <item
        android:id="@+id/action_how_it_works"
        android:orderInCategory="100"
        android:title="@string/how_it_works"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_FAQ"
        android:orderInCategory="100"
        android:title="@string/FAQ"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
